--- a/wwwroot/css/DataJuggler.Blazor.Components.css
+++ b/wwwroot/css/DataJuggler.Blazor.Components.css
@@ -43151,814 +43151,333 @@
     max-width: 1000px;
 }
 .zindex0
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 0;
-    overflow: visible;
-}
-.zindex1
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-    overflow: visible;
-}
-.zindex2
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 2;
-    overflow: visible;
-}
-.zindex3
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 3;
-    overflow: visible;
-}
-.zindex4
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 4;
-    overflow: visible;
-}
-.zindex5
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 5;
-    overflow: visible;
-}
-.zindex6
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 6;
-    overflow: visible;
-}
-.zindex7
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 7;
-    overflow: visible;
-}
-.zindex8
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 8;
-    overflow: visible;
-}
-.zindex9
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 9;
-    overflow: visible;
-}
-.zindex10
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 10;
-    overflow: visible;
-}
-.zindex11
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 11;
-    overflow: visible;
-}
-.zindex12
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 12;
-    overflow: visible;
-}
-.zindex13
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 13;
-    overflow: visible;
-}
-.zindex14
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 14;
-    overflow: visible;
-}
-.zindex15
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 15;
-    overflow: visible;
-}
-.zindex16
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 16;
-    overflow: visible;
-}
-.zindex17
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 17;
-    overflow: visible;
-}
-.zindex18
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 18;
-    overflow: visible;
-}
-.zindex19
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 19;
-    overflow: visible;
-}
-.zindex20
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 20;
-    overflow: visible;
-}
-.zindex21
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 21;
-    overflow: visible;
-}
-.zindex22
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 22;
-    overflow: visible;
-}
-.zindex23
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 23;
-    overflow: visible;
-}
-.zindex24
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 24;
-    overflow: visible;
-}
-.zindex25
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 25;
-    overflow: visible;
-}
-.zindex26
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 26;
-    overflow: visible;
-}
-.zindex27
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 27;
-    overflow: visible;
-}
-.zindex28
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 28;
-    overflow: visible;
-}
-.zindex29
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 29;
-    overflow: visible;
-}
-.zindex30
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 30;
-    overflow: visible;
-}
-.zindex31
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 31;
-    overflow: visible;
-}
-.zindex32
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 32;
-    overflow: visible;
-}
-.zindex33
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 33;
-    overflow: visible;
-}
-.zindex34
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 34;
-    overflow: visible;
-}
-.zindex35
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 35;
-    overflow: visible;
-}
-.zindex36
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 36;
-    overflow: visible;
-}
-.zindex37
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 37;
-    overflow: visible;
-}
-.zindex38
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 38;
-    overflow: visible;
-}
-.zindex39
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 39;
-    overflow: visible;
-}
-.zindex40
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 40;
-    overflow: visible;
-}
-.zindex41
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 41;
-    overflow: visible;
-}
-.zindex42
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 42;
-    overflow: visible;
-}
-.zindex43
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 43;
-    overflow: visible;
-}
-.zindex44
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 44;
-    overflow: visible;
-}
-.zindex45
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 45;
-    overflow: visible;
-}
-.zindex46
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 46;
-    overflow: visible;
-}
-.zindex47
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 47;
-    overflow: visible;
-}
-.zindex48
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 48;
-    overflow: visible;
-}
-.zindex49
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 49;
-    overflow: visible;
-}
-.zindex50
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 50;
-    overflow: visible;
-}
-.zindex51
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 51;
-    overflow: visible;
-}
-.zindex52
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 52;
-    overflow: visible;
-}
-.zindex53
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 53;
-    overflow: visible;
-}
-.zindex54
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 54;
-    overflow: visible;
-}
-.zindex55
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 55;
-    overflow: visible;
-}
-.zindex56
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 56;
-    overflow: visible;
-}
-.zindex57
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 57;
-    overflow: visible;
-}
-.zindex58
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 58;
-    overflow: visible;
-}
-.zindex59
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 59;
-    overflow: visible;
-}
-.zindex60
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 60;
-    overflow: visible;
-}
-.zindex61
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 61;
-    overflow: visible;
-}
-.zindex62
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 62;
-    overflow: visible;
-}
-.zindex63
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 63;
-    overflow: visible;
-}
-.zindex64
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 64;
-    overflow: visible;
-}
-.zindex65
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 65;
-    overflow: visible;
-}
-.zindex66
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 66;
-    overflow: visible;
-}
-.zindex67
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 67;
-    overflow: visible;
-}
-.zindex68
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 68;
-    overflow: visible;
-}
-.zindex69
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 69;
-    overflow: visible;
-}
-.zindex70
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 70;
-    overflow: visible;
-}
-.zindex71
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 71;
-    overflow: visible;
-}
-.zindex72
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 72;
-    overflow: visible;
-}
-.zindex73
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 73;
-    overflow: visible;
-}
-.zindex74
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 74;
-    overflow: visible;
-}
-.zindex75
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 75;
-    overflow: visible;
-}
-.zindex76
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 76;
-    overflow: visible;
-}
-.zindex77
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 77;
-    overflow: visible;
-}
-.zindex78
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 78;
-    overflow: visible;
-}
-.zindex79
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 79;
-    overflow: visible;
-}
-.zindex80
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 80;
-    overflow: visible;
-}
-.zindex81
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 81;
-    overflow: visible;
-}
-.zindex82
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 82;
-    overflow: visible;
-}
-.zindex83
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 83;
-    overflow: visible;
-}
-.zindex84
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 84;
-    overflow: visible;
-}
-.zindex85
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 85;
-    overflow: visible;
-}
-.zindex86
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 86;
-    overflow: visible;
-}
-.zindex87
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 87;
-    overflow: visible;
-}
-.zindex88
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 88;
-    overflow: visible;
-}
-.zindex89
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 89;
-    overflow: visible;
-}
-.zindex90
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 90;
-    overflow: visible;
-}
-.zindex91
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 91;
-    overflow: visible;
-}
-.zindex92
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 92;
-    overflow: visible;
-}
-.zindex93
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 93;
-    overflow: visible;
-}
-.zindex94
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 94;
-    overflow: visible;
-}
-.zindex95
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 95;
-    overflow: visible;
-}
-.zindex96
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 96;
-    overflow: visible;
-}
-.zindex97
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 97;
-    overflow: visible;
-}
-.zindex98
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 98;
-    overflow: visible;
-}
-.zindex99
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 99;
-    overflow: visible;
-}
-.zindex100
-{
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index: 100;
-    overflow: visible;
-}
-.zindex400
-{
+{  
+    z-index: 0 !important;    
+}
+.zindex1 {
+    z-index: 1 !important;
+}
+.zindex2 {
+    z-index: 2 !important;
+}
+.zindex3 {
+    z-index: 3 !important;
+}
+.zindex4 {
+    z-index: 4 !important;
+}
+.zindex5 {
+    z-index: 5 !important;
+}
+.zindex6 {
+    z-index: 6 !important;
+}
+.zindex7 {
+    z-index: 7 !important;
+}
+.zindex8 {
+    z-index: 8 !important;
+}
+.zindex9 {
+    z-index: 9 !important;
+}
+.zindex10 {
+    z-index: 10 !important;
+}
+.zindex11 {
+    z-index: 11 !important;
+}
+.zindex12 {
+    z-index: 12 !important;
+}
+.zindex13 {
+    z-index: 13 !important;
+}
+.zindex14 {
+    z-index: 14 !important;
+}
+.zindex15 {
+    z-index: 15 !important;
+}
+.zindex16 {
+    z-index: 16 !important;
+}
+.zindex17 {
+    z-index: 17 !important;
+}
+.zindex18 {
+    z-index: 18 !important;
+}
+.zindex19 {
+    z-index: 19 !important;
+}
+.zindex20 {
+    z-index: 20 !important;
+}
+.zindex21 {
+    z-index: 21 !important;
+}
+.zindex22 {
+    z-index: 22 !important;
+}
+.zindex23 {
+    z-index: 23 !important;
+}
+.zindex24 {
+    z-index: 24 !important;
+}
+.zindex25 {
+    z-index: 25 !important;
+}
+.zindex26 {
+    z-index: 26 !important;
+}
+.zindex27 {
+    z-index: 27 !important;
+}
+.zindex28 {
+    z-index: 28 !important;
+}
+.zindex29 {
+    z-index: 29 !important;
+}
+.zindex30 {
+    z-index: 30 !important;
+}
+.zindex31 {
+    z-index: 31 !important;
+}
+.zindex32 {
+    z-index: 32 !important;
+}
+.zindex33 {
+    z-index: 33 !important;
+}
+.zindex34 {
+    z-index: 34 !important;
+}
+.zindex35 {
+    z-index: 35 !important;
+}
+.zindex36 {
+    z-index: 36 !important;
+}
+.zindex37 {
+    z-index: 37 !important;
+}
+.zindex38 {
+    z-index: 38 !important;
+}
+.zindex39 {
+    z-index: 39 !important;
+}
+.zindex40 {
+    z-index: 40 !important;
+}
+.zindex41 {
+    z-index: 41 !important;
+}
+.zindex42 {
+    z-index: 42 !important;
+}
+.zindex43 {
+    z-index: 43 !important;
+}
+.zindex44 {
+    z-index: 44 !important;
+}
+.zindex45 {
+    z-index: 45 !important;
+}
+.zindex46 {
+    z-index: 46 !important;
+}
+.zindex47 {
+    z-index: 47 !important;
+}
+.zindex48 {
+    z-index: 48 !important;
+}
+.zindex49 {
+    z-index: 49 !important;
+}
+.zindex50 {
+    z-index: 50 !important;
+}
+.zindex51 {
+    z-index: 51 !important;
+}
+.zindex52 {
+    z-index: 52 !important;
+}
+.zindex53 {
+    z-index: 53 !important;
+}
+.zindex54 {
+    z-index: 54 !important;
+}
+.zindex55 {
+    z-index: 55 !important;
+}
+.zindex56 {
+    z-index: 56 !important;
+}
+.zindex57 {
+    z-index: 57 !important;
+}
+.zindex58 {
+    z-index: 58 !important;
+}
+.zindex59 {
+    z-index: 59 !important;
+}
+.zindex60 {
+    z-index: 60 !important;
+}
+.zindex61 {
+    z-index: 61 !important;
+}
+.zindex62 {
+    z-index: 62 !important;
+}
+.zindex63 {
+    z-index: 63 !important;
+}
+.zindex64 {
+    z-index: 64 !important;
+}
+.zindex65 {
+    z-index: 65 !important;
+}
+.zindex66 {
+    z-index: 66 !important;
+}
+.zindex67 {
+    z-index: 67 !important;
+}
+.zindex68 {
+    z-index: 68 !important;
+}
+.zindex69 {
+    z-index: 69 !important;
+}
+.zindex70 {
+    z-index: 70 !important;
+}
+.zindex71 {
+    z-index: 71 !important;
+}
+.zindex72 {
+    z-index: 72 !important;
+}
+.zindex73 {
+    z-index: 73 !important;
+}
+.zindex74 {
+    z-index: 74 !important;
+}
+.zindex75 {
+    z-index: 75 !important;
+}
+.zindex76 {
+    z-index: 76 !important;
+}
+.zindex77 {
+    z-index: 77 !important;
+}
+.zindex78 {
+    z-index: 78 !important;
+}
+.zindex79 {
+    z-index: 79 !important;
+}
+.zindex80 {
+    z-index: 80 !important;
+}
+.zindex81 {
+    z-index: 81 !important;
+}
+.zindex82 {
+    z-index: 82 !important;
+}
+.zindex83 {
+    z-index: 83 !important;
+}
+.zindex84 {
+    z-index: 84 !important;
+}
+.zindex85 {
+    z-index: 85 !important;
+}
+.zindex86 {
+    z-index: 86 !important;
+}
+.zindex87 {
+    z-index: 87 !important;
+}
+.zindex88 {
+    z-index: 88 !important;
+}
+.zindex89 {
+    z-index: 89 !important;
+}
+.zindex90 {
+    z-index: 90 !important;
+}
+.zindex91 {
+    z-index: 91 !important;
+}
+.zindex92 {
+    z-index: 92 !important;
+}
+.zindex93 {
+    z-index: 93 !important;
+}
+.zindex94 {
+    z-index: 94 !important;
+}
+.zindex95 {
+    z-index: 95 !important;
+}
+.zindex96 {
+    z-index: 96 !important;
+}
+.zindex97 {
+    z-index: 97 !important;
+}
+.zindex98 {
+    z-index: 98 !important;
+}
+.zindex99 {
+    z-index: 99 !important;
+}
+.zindex100 {
+    z-index: 100 !important;
+}
+.zindex200 {
+    z-index: 200 !important;
+}
+.zindex300 {
+    z-index: 300 !important;
+}
+.zindex400 {
     z-index: 400 !important;
+}
+.zindex500 {
+    z-index: 500 !important;
+}
+.zindex600 {
+    z-index: 600 !important;
+}
+.zindex700 {
+    z-index: 700 !important;
+}
+.zindex800 {
+    z-index: 800 !important;
+}
+.zindex900 {
+    z-index: 900 !important;
+}
+.zindex1000 {
+    z-index: 1000 !important;
 }
