The CheckedListBox got a few new properties.

--- a/CheckBoxComponent.razor
+++ b/CheckBoxComponent.razor
@@ -8,10 +8,14 @@
     z-index: @ZIndex;
 </Styled>
 <Styled @bind-Classname=@CheckBoxStyle>
-    background-color: @BackColor;
+    background-color: @BackgroundColor;
+    height: @HeightStyle;
+    width: @WidthStyle;
     position: @Position;
     left: @CheckBoxXStyle;
     top: @CheckBoxYStyle;
+    border-width: @BorderWidthStyle;
+    border-color: @BorderColor.Name;
     clear: both;
 </Styled>
 
