I made some changes to the ComboBox.

--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -74,7 +74,13 @@
     position: @ListContainerPosition;
     left: @ListContainerLeftStyle;
     top: @ListContainerTopStyle;
-    z-index: @ZIndexPlus10;    
+    z-index: @ZIndexPlus10;
+    width: @ListItemWidthStyle;
+    min-width: @ListItemWidthStyle;
+    max-width: @ListItemWidthStyle;
+    height: @ListContainerHeightStyle;
+    min-height: @ListContainerHeightStyle;
+    max-height: @ListContainerHeightStyle;
 </Styled>
 
 <div class="@ContainerStyle @ClassName textdonotwrap">
