--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -43,7 +43,8 @@
     position: @Position;
     width: @ListItemWidthStyle;
     min-width: @ListItemWidthStyle;
-    height: @ListItemHeightStyle;    
+    height: @ListItemHeightStyle;
+    margin-bottom: @ListItemMarginBottomStyle;
     cursor: pointer;
 </Styled>
 <Styled @bind-Classname=@ButtonStyle>
