I have tried to make the combobox auto hide if loses focus, no success yet. Will try again later, I have work to do.

--- a/CheckBoxComponent.razor
+++ b/CheckBoxComponent.razor
@@ -17,6 +17,7 @@
     border-width: @BorderWidthStyle;
     border-color: @BorderColor.Name;
     clear: both;
+    z-index: @ZIndexPlus10;
 </Styled>
 
 <div class="@ClassName">
