I took out the code for SetFocusONFirstRender for the CheckedListComponent. It would be nice to autoclose, but not happening yet.

--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -45,7 +45,7 @@
     clear: both;
 </Styled>
 
-<div class="@CheckedlistboxStyle" tabindex="0" @onblur="HandleOnBlur" @ref="ContainerElement">
+<div class="@CheckedlistboxStyle" tabindex="0" @onblur="HandleOnBlur">
     <table class="@ClassName" width="@Width" height="@Height">
         @if (HasItems)
         {  
