--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -120,8 +120,7 @@
                     ListItemTop="@CheckedListItemTop" ListItemBackgroundColor=@ListItemBackgroundColor                    
                     CheckBoxTextXPosition="@CheckBoxTextXPosition" CheckBoxTextYPosition="@CheckBoxTextYPosition"
                     Top="0" ZIndex="@ZIndexPlus10" ListItemMarginBottom="@ListItemMarginBottom"
-                    NotifyParentOnBlur="true" SetFocusOnFirstRender="true"
-                    CheckBoxHeight="@CheckBoxHeight" CheckBoxwidth="@CheckBoxWidth"
+                    NotifyParentOnBlur="true" CheckBoxHeight="@CheckBoxHeight" CheckBoxwidth="@CheckBoxWidth"
                     CheckBoxXPosition=@CheckBoxXPosition  CheckBoxYPosition="@CheckBoxYPosition" 
                     Left=@CheckedListLeft  ListItemClassName="@ListItemClassName"  ClassName="@CheckedListClassName">
                 </CheckedListBox>
