--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -20,8 +20,7 @@
     display: inline-block;
     width: @TextBoxWidthStyle;
     height: 100%;
-    margin-left: @MarginLeftStyle;
-    width: @Column2WidthStyle;
+    margin-left: @MarginLeftStyle;    
 </Styled>
 <Styled @bind-Classname=@Column3Style>
     display: inline-block;
@@ -53,6 +52,7 @@
     height: 100%;
 </Styled>
 <Styled @bind-Classname=@TextBoxControlStyle>
+    display: @DisplayStyle;
     width: @WidthStyle;
     position: @Position;
     left: @LeftStyle;
